--- a/app/views/Set_Up_A_Direct_Debit/your_address_2.html
+++ b/app/views/Set_Up_A_Direct_Debit/your_address_2.html
@@ -29,6 +29,8 @@
         Your address
       </h1>
 
+      <form class="post" method="post" action="DD_plan">
+
       <p>
         This is the address your bank account is registered at.
       </p>
@@ -39,8 +41,8 @@
       </p>
 
 {{ govukRadios({
-  idPrefix: "select-address",
-  name: "select-address",
+  idPrefix: "account-address",
+  name: "account-address",
   fieldset: {
     legend: {
       text: "Select an address",
@@ -50,7 +52,7 @@
   },
   items: [
     {
-      value: "",
+      value: "The Woolwich Centre, Wellington Street, Woolwich, SE18 6HQ",
       text: "The Woolwich Centre, Wellington Street, Woolwich, SE18 6HQ"
     }
   ]
@@ -61,9 +63,11 @@
       {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
-        text: "Continue",
-        href: "DD_plan"
+        text: "Continue"
       }) }}
+
+      </form>
+
     </div>
   </div>
 
