--- a/app/views/Set_Up_A_Direct_Debit/confirmation.html
+++ b/app/views/Set_Up_A_Direct_Debit/confirmation.html
@@ -24,15 +24,12 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
           {{ govukPanel({
             titleText: "Application to set up Direct Debit complete",
             html: "Your reference number<br><strong>HDJ2123F</strong>"
           }) }}
 
-          <p class="govuk-body">We have sent you a confirmation email.</p>
+          <p class="govuk-body">We have sent you a confirmation email, to {{ data['emailAddress'] }}.</p>
 
           <h2 class="govuk-heading-m">What happens next</h2>
 
@@ -46,8 +43,7 @@
           <p class="govuk-body">
             <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
           </p>
-        </div>
-      </div>
+
 
 
     </div>
