--- a/app/views/Set_Up_A_Direct_Debit/your_address.html
+++ b/app/views/Set_Up_A_Direct_Debit/your_address.html
@@ -29,6 +29,8 @@
         Your address
       </h1>
 
+      <form class="post" method="post" action="your_address_2">
+
       <p>
         This is the address your bank account is registered at.
       </p>
@@ -43,13 +45,11 @@
       }) }}
 
 
-
-      {% from "govuk/components/button/macro.njk" import govukButton %}
-
       {{ govukButton({
-        text: "Find address",
-        href: "your_address_2"
+        text: "Find address"
       }) }}
+
+      </form>
     </div>
   </div>
 
