--- a/app/views/Set_Up_A_Direct_Debit/address_check.html
+++ b/app/views/Set_Up_A_Direct_Debit/address_check.html
@@ -29,10 +29,10 @@
         Check the property address
       </h1>
 
-      <form class="post" method="post" action="correct_council_tax_address">
+      <form class="post" method="post" action="address_check_check">
 
       <p>
-        Council tax account number 123445678 is for the property at the address:
+        Council tax account number {{ data['council-tax-account-number'] }} is for the property at the address:
       </p>
 
       <p>
