--- a/app/views/Set_Up_A_Direct_Debit/confirmation.html
+++ b/app/views/Set_Up_A_Direct_Debit/confirmation.html
@@ -25,19 +25,19 @@
     <div class="govuk-grid-column-two-thirds">
 
           {{ govukPanel({
-            titleText: "Application to set up Direct Debit complete",
-            html: "Your reference number<br><strong>HDJ2123F</strong>"
+            titleText: "Direct debit application has been received and is being processed",
+            html: "Your reference number<br><strong>SA3G9C 241ZN</strong>"
           }) }}
 
-          <p class="govuk-body">We have sent you a confirmation email, to {{ data['emailAddress'] }}.</p>
+          <p class="govuk-body">We have sent you a confirmation email.</p>
 
           <h2 class="govuk-heading-m">What happens next</h2>
 
           <p class="govuk-body">
-            We’ve sent your application to XXXXXX.
+            We will process your application. This can take up to 7 days. When it is set up you will receive confirmation by email.
           </p>
           <p class="govuk-body">
-            They will contact you either to confirm your registration, or to ask for more information.
+            If we have any questions we will contact you directly.
           </p>
 
           <p class="govuk-body">
