--- a/app/views/Set_Up_A_Direct_Debit/index.html
+++ b/app/views/Set_Up_A_Direct_Debit/index.html
@@ -51,7 +51,7 @@
       </h2>
 
       <p>
-        Content here
+        To find out how the information you provde on this digital service may be used, please see our <a href="#">privacy notice</a>.
       </p>
 
 
@@ -65,7 +65,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          Your council tax account number
+          Your council tax account number, found on any Royal Borough of Greenwich council tax bill
         </li>
         <li>
           Your bank account details
