--- a/app/views/Set_Up_A_Direct_Debit/your_personal_details.html
+++ b/app/views/Set_Up_A_Direct_Debit/your_personal_details.html
@@ -29,7 +29,7 @@
         Your personal details
       </h1>
 
-      <form class="post" method="post" action="your_address">
+      <form class="post" method="post" action="communication_preferences">
 
       {{ govukInput({
         label: {
