--- a/app/views/Set_Up_A_Direct_Debit/DD_plan.html
+++ b/app/views/Set_Up_A_Direct_Debit/DD_plan.html
@@ -44,14 +44,14 @@
       value: "£120.00 - paid monthly for 10 months",
       text: "£120.00 - paid monthly for 10 months",
       hint: {
-  text: "You’ll have a user ID if you’ve registered for Self Assessment or filed a tax return online before."
+  text: "This adds up to a total of £1200 every year"
       }
     },
     {
       value: "£100.00 - paid monthly for 12 months",
       text: "£100.00 - paid monthly for 12 months",
       hint: {
-  text: "You’ll have a user ID if you’ve registered for Self Assessment or filed a tax return online before."
+  text: "This adds up to a total of £1200 every year"
       }
     },
     {
