--- a/app/views/Set_Up_A_Direct_Debit/council_tax_number_no_number.html
+++ b/app/views/Set_Up_A_Direct_Debit/council_tax_number_no_number.html
@@ -24,10 +24,20 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
+      {{ govukErrorSummary({
+        "titleText": "There is a problem",
+        "errorList": [
+          {
+            "text": "Enter an 8 digit council tax reference number",
+            "href": "#council-tax-account-number"
+          }
+        ]
+      }) }}
+
       <span class="govuk-caption-l">Set up a Direct Debit</span>
 
       <form class="post" method="post" action="council_tax_number_check">
-
 
             {{ govukInput({
               label: {
@@ -35,11 +45,14 @@
                 classes: "govuk-label--xl",
                 isPageHeading: false
               },
-              classes: "govuk-input--width-10",
+              classes: "govuk-input--width-10 ",
               id: "council-tax-account-number",
               name: "council-tax-account-number",
               hint: {
                 text: "Must be between 8 digits long"
+              },
+              errorMessage: {
+                text: "Enter an 8 digit council tax reference number"
               },
               inputmode: "numeric",
               pattern: "[0-9]*",
