index and start pages

--- a/app/views/Set_Up_A_Direct_Debit/index.html
+++ b/app/views/Set_Up_A_Direct_Debit/index.html
@@ -47,36 +47,33 @@
       </ul>
 
       <h2 class="govuk-heading-l">
-        Data protection statement
+        Set up a council tax Direct Debit online
       </h2>
 
       <p>
-        To find out how the information you provde on this digital service may be used, please see our <a href="#">privacy notice</a>.
+        Fill in the form online.
       </p>
+
+      <p>
+        <a href="Set_Up_A_Direct_Debit/start">Start</a>
 
 
       <h2 class="govuk-heading-l">
-        Before you start
+        Set up a council tax Direct Debit by post
       </h2>
 
       <p>
-        You will need
+        Download the form, print it out, fill it in and send it the council office.
       </p>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          Your council tax account number, found on any Royal Borough of Greenwich council tax bill
-        </li>
-        <li>
-          Your bank account details
-        </li>
-      </ul>
+      <p>
+        This process can take up to 14 days to set up.
+      </p>
 
-      {{ govukButton({
-        text: "Start now",
-        href: "Set_Up_A_Direct_Debit/council_tax_number",
-        isStartButton: true
-      }) }}
+      <p>
+        <a href="#">Download the Direct Debit form</a>
+      </p>
+
 
     </div>
   </div>
