--- a/app/views/Set_Up_A_Direct_Debit/communication_preferences.html
+++ b/app/views/Set_Up_A_Direct_Debit/communication_preferences.html
@@ -29,7 +29,7 @@
         Communication preferences
       </h1>
 
-      <form class="post" method="post" action="your_address">
+      <form class="post" method="post" action="same_address_question">
 
         <p>
           You have provided an email address.
