--- a/app/views/Set_Up_A_Direct_Debit/index.html
+++ b/app/views/Set_Up_A_Direct_Debit/index.html
@@ -55,7 +55,11 @@
       </p>
 
       <p>
-        <a href="Set_Up_A_Direct_Debit/start">Start</a>
+        This process can take up to 7 days to set up.
+      </p>
+
+      <p>
+        <a href="Set_Up_A_Direct_Debit/start">Apply online</a>
 
 
       <h2 class="govuk-heading-l">
