--- a/app/views/Set_Up_A_Direct_Debit/start.html
+++ b/app/views/Set_Up_A_Direct_Debit/start.html
@@ -46,7 +46,7 @@
 
       {{ govukButton({
         text: "Start now",
-        href: "Set_Up_A_Direct_Debit/council_tax_number",
+        href: "council_tax_number",
         isStartButton: true
       }) }}
 
