split into version
incuded version bespoke routes file

--- a/app/views/Set_Up_A_Direct_Debit/v1/index.html
+++ b/app/views/Set_Up_A_Direct_Debit/v1/index.html
@@ -59,7 +59,7 @@
       </p>
 
       <p>
-        <a href="Set_Up_A_Direct_Debit/start">Apply online</a>
+        <a href="start">Apply online</a>
 
 
       <h2 class="govuk-heading-l">
