--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,10 +12,19 @@
       <h1 class="govuk-heading-xl">
         Royal Borough of Greenwich
       </h1>
+
+      <h2 class="govuk-heading-m">Direct Debit</h2>
+
+
+
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="Set_Up_A_Direct_Debit">Direct Debit</a></li>
-        <li><a href="Register_To_Use_Online">Register to use online</a></li>
+        <li><a href="Set_Up_A_Direct_Debit/v1/index">v1 landing page</a></li>
       </ul>
+
+      <h2 class="govuk-heading-m">Register to use online</h2>
+
+
+      <li><a href="Register_To_Use_Online"></a></li>
 
 
     </div>
