V draft reigster to use online journey

--- a/app/views/Set_Up_A_Direct_Debit/v1/same_address_question.html
+++ b/app/views/Set_Up_A_Direct_Debit/v1/same_address_question.html
@@ -26,7 +26,7 @@
     <div class="govuk-grid-column-two-thirds">
       <span class="govuk-caption-l">Set up a Direct Debit</span>
       <h1 class="govuk-heading-l">
-        Your bank account address
+        Your home address
       </h1>
 
       <form class="post" method="post" action="same_address_check">
@@ -47,7 +47,7 @@
   name: "same-address",
   fieldset: {
     legend: {
-      text: "Is this the same address your bank account is registered at?",
+      text: "Is this the same address you live at?",
       classes: "govuk-fieldset__legend--m"
     }
   },
