--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,11 +21,18 @@
         <li><a href="Set_Up_A_Direct_Debit/v1/index">v1 landing page</a></li>
       </ul>
 
+      <h2 class="govuk-heading-m">View a council tax balance online</h2>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="View_Council_Tax_Balance/v1/index">v1 landing page</a></li>
+      </ul>
+
+
       <h2 class="govuk-heading-m">Register to use online</h2>
 
-
-      <li><a href="Register_To_Use_Online"></a></li>
-
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="Register_To_Use_Online/v1/index">v1 landing page</a></li>
+      </ul>
 
     </div>
   </div>
