--- a/app/views/Register_To_Use_Online/v1/code_delivery.html
+++ b/app/views/Register_To_Use_Online/v1/code_delivery.html
@@ -9,11 +9,13 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-l">Register to use online services</span>
       <h1 class="govuk-heading-xl">
-        Register to use online services
+        xxxx
       </h1>
 
-      <form class="form" action="Register_To_Use_Online/provide_mobile_number" method="post">
+
+      <form class="post" action="/Register_To_Use_Online/v1/check_delivery_method" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
