--- a/app/views/Register_To_Use_Online/v1/provide_mobile_number.html
+++ b/app/views/Register_To_Use_Online/v1/provide_mobile_number.html
@@ -9,11 +9,13 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
+      <span class="govuk-caption-l">Register to use online services</span>
       <h1 class="govuk-heading-xl">
         Provide your mobile telephone number
       </h1>
 
-      <form class="form" action="/Register_To_Use_Online/text_message_sent" method="post">
+      <form class="form" action=text_message_sent" method="post">
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="mobile-number">
