--- a/app/views/Register_To_Use_Online/v1/provide_postal_address.html
+++ b/app/views/Register_To_Use_Online/v1/provide_postal_address.html
@@ -9,18 +9,20 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
+      <span class="govuk-caption-l">Register to use online services</span>
       <h1 class="govuk-heading-xl">
-        A text message has been sent to the number 0797 693 7205
+        Provide your post address
       </h1>
 
-      <form class="form" action="/Register_To_Use_Online/access_granted" method="post">
+      <form class="form" action="post_to_send" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="pin-number">
-            Enter the PIN number from the text message
+          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="mobile-number">
+
             </label>
           </h1>
-          <input class="govuk-input govuk-input--width-4" id="width-4" name="width-4" type="text">
+          <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
 
         </div>
       <button class="govuk-button" data-module="govuk-button">Continue</button>
