--- a/app/views/Register_To_Use_Online/v1/provide_mobile_number.html
+++ b/app/views/Register_To_Use_Online/v1/provide_mobile_number.html
@@ -15,7 +15,7 @@
         Provide your mobile telephone number
       </h1>
 
-      <form class="form" action=text_message_sent" method="post">
+      <form class="form" action="text_message_sent" method="post">
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="mobile-number">
