--- a/app/views/Register_To_Use_Online/v1/post_to_send.html
+++ b/app/views/Register_To_Use_Online/v1/post_to_send.html
@@ -18,6 +18,9 @@
         You'll receive the PIN within 7 working days. Return to this website when you receive it.
       </p>
 
+      <P>
+        <a href="start">Cheat link to show later</a>
+        </p>
 
     </div>
   </div>
