--- a/app/views/Set_Up_A_Direct_Debit/v2/DD_plan.html
+++ b/app/views/Set_Up_A_Direct_Debit/v2/DD_plan.html
@@ -78,7 +78,7 @@
   },
   classes: "govuk-input--width-4",
   hint: {
-    text: "Choose the day of the month you'd like your payments to be taken. You can select any date expcet the date as a whole number (e.g. 1, 22, 30 etc)."
+    text: "The day of the month you would like the payment to be taken. You can select any date except the 31st."
   },
   id: "payment-date",
   name: "payment-date"
