--- a/app/views/Set_Up_A_Direct_Debit/v2/address_check.html
+++ b/app/views/Set_Up_A_Direct_Debit/v2/address_check.html
@@ -26,42 +26,42 @@
     <div class="govuk-grid-column-two-thirds">
       <span class="govuk-caption-l">Set up a Direct Debit</span>
       <h1 class="govuk-heading-xl">
-        Your address
+        Check the property address
       </h1>
 
-      <form class="post" method="post" action="DD_plan">
+      <form class="post" method="post" action="address_check_check">
 
       <p>
-        This is the address your bank account is registered at.
+        Council tax account number {{ data['council-tax-account-number'] }} is for the property at the address:
       </p>
 
-      <h2 class="govuk-heading-m">Postcode</h2>
       <p>
-        SE18 6HQ <a href="your_address">Change</a>
+        123 Main Road<br>
+        Greenwich<br>
+        SE10 1AA
       </p>
 
-{{ govukRadios({
-  idPrefix: "account-address",
-  name: "account-address",
+      {{ govukRadios({
+  classes: "govuk-radios--inline",
+  idPrefix: "correct-property",
+  name: "correct-property",
   fieldset: {
     legend: {
-      text: "Select an address",
-      isPageHeading: true,
+      text: "Is this the property you want to pay council tax for?",
       classes: "govuk-fieldset__legend--m"
     }
   },
   items: [
     {
-      value: "The Woolwich Centre, Wellington Street, Woolwich, SE18 6HQ",
-      text: "The Woolwich Centre, Wellington Street, Woolwich, SE18 6HQ"
+      value: "yes",
+      text: "Yes"
+    },
+    {
+      value: "no",
+      text: "No"
     }
   ]
 }) }}
-
-<p>
-  <a href="manual_address_entry">I can't find my address in the list</a>
-<p>
-
 
       {% from "govuk/components/button/macro.njk" import govukButton %}
 
@@ -70,7 +70,6 @@
       }) }}
 
       </form>
-
     </div>
   </div>
 
