--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,7 +18,9 @@
 
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="Set_Up_A_Direct_Debit/v1/index">v1 landing page</a></li>
+        <li><a href="Set_Up_A_Direct_Debit/v1/start">v1 start page</a> - Emyr's initial wireframes</li>
+        <li><a href="Set_Up_A_Direct_Debit/v2/index">v2 landing page</a> - journey development</li>
+
       </ul>
 
       <h2 class="govuk-heading-m">View a council tax balance online</h2>
