--- a/app/views/Set_Up_A_Direct_Debit/v1/start.html
+++ b/app/views/Set_Up_A_Direct_Debit/v1/start.html
@@ -27,17 +27,43 @@
         Set up a council tax Direct Debit online
       </h1>
 
-      <h2 class="govuk-heading-l">
-        Before you start
-      </h2>
 
-      <p>
-        You will need
-      </p>
+      <h2 class="govuk-heading-l">
+        The easiest way to pay
+      </h2>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          Your council tax account number, found on any Royal Borough of Greenwich council tax bill
+          It saves you time
+        </li>
+        <li>
+          It gives you peace of mind that your payment will be taken on time
+        </li>
+        <li>
+          You spread the payments out over the year
+        </li>
+        <li>
+          The payments can go out on any day of the month (apart from the 31st)
+        </li>
+      </ul>
+
+
+
+          <h2 class="govuk-heading-m">
+                    Data protection
+                  </h2>
+
+                  <p>
+                    To find out how the information you provde on this digital service may be used, please see our <a href="#">privacy notice</a>.
+                  </p>
+
+      <h2 class="govuk-heading-m">
+        You will need
+      </h2>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          Council tax account number
         </li>
         <li>
           Your bank account details
@@ -46,18 +72,21 @@
 
       {{ govukButton({
         text: "Start now",
-        href: "council_tax_number",
+        href: "your_details",
         isStartButton: true
       }) }}
 
+      <hr>
 
-            <h2 class="govuk-heading-m">
-              Data protection
-            </h2>
+      <h2 class="govuk-heading-m">
+        Useful links
+      </h2>
 
-            <p>
-              To find out how the information you provde on this digital service may be used, please see our <a href="#">privacy notice</a>.
-            </p>
+      <p>
+        <a href="#">Print the Direct Debit mandate form</a>
+      </p>
+
+
 
 
 
