--- a/app/views/Set_Up_A_Direct_Debit/v2/confirmation.html
+++ b/app/views/Set_Up_A_Direct_Debit/v2/confirmation.html
@@ -26,14 +26,24 @@
 
           {{ govukPanel({
             titleText: "Direct debit application has been received and is being processed",
-            html: "Your reference number<br><strong>A3GPC 241ZN</strong><br><br>Plese note it can take up to 14 days to setup your Direct Debit"
+            html: "Your reference number<br><strong>SA3G9C 241ZN</strong>"
           }) }}
 
-          <h2 class="govuk-heading-m">
-            What happens next?
-          </h2>
-
           <p class="govuk-body">We have sent you a confirmation email.</p>
+
+          <h2 class="govuk-heading-m">What happens next</h2>
+
+          <p class="govuk-body">
+            We will process your application. This can take up to 7 days. When it is set up you will receive confirmation by email.
+          </p>
+          <p class="govuk-body">
+            If we have any questions we will contact you directly.
+          </p>
+
+          <p class="govuk-body">
+            <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
+          </p>
+
 
 
     </div>
