--- a/app/views/Set_Up_A_Direct_Debit/v2/your_address.html
+++ b/app/views/Set_Up_A_Direct_Debit/v2/your_address.html
@@ -29,48 +29,27 @@
         Your address
       </h1>
 
-      <form class="post" method="post" action="DD_plan">
+      <form class="post" method="post" action="your_address_2">
 
       <p>
         This is the address your bank account is registered at.
       </p>
 
-      <h2 class="govuk-heading-m">Postcode</h2>
-      <p>
-        SE18 6HQ <a href="your_address">Change</a>
-      </p>
+      {{ govukInput({
+        label: {
+          text: "Enter your postcode"
+        },
+        classes: "govuk-input--width-10",
+        id: "postcode",
+        name: "postcode"
+      }) }}
 
-{{ govukRadios({
-  idPrefix: "account-address",
-  name: "account-address",
-  fieldset: {
-    legend: {
-      text: "Select an address",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--m"
-    }
-  },
-  items: [
-    {
-      value: "The Woolwich Centre, Wellington Street, Woolwich, SE18 6HQ",
-      text: "The Woolwich Centre, Wellington Street, Woolwich, SE18 6HQ"
-    }
-  ]
-}) }}
-
-<p>
-  <a href="manual_address_entry">I can't find my address in the list</a>
-<p>
-
-
-      {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
-        text: "Continue"
+        text: "Find address"
       }) }}
 
       </form>
-
     </div>
   </div>
 
