--- a/app/views/Set_Up_A_Direct_Debit/v3/start.html
+++ b/app/views/Set_Up_A_Direct_Debit/v3/start.html
@@ -27,7 +27,7 @@
         Set up a council tax Direct Debit online
       </h1>
 
-      <h2 class="govuk-heading-l">
+      <h2 class="govuk-heading-m">
         Before you start
       </h2>
 
@@ -40,7 +40,7 @@
           Your council tax account number, found on any Royal Borough of Greenwich council tax bill
         </li>
         <li>
-          Your bank account details
+          Your bank account details. You must be the sole signatory and it must be a UK bank account.
         </li>
         <li>
           Need to know whether you want to pay your council tax for a year in one amount or a number of months
@@ -50,11 +50,16 @@
         </li>
       </ul>
 
+
       {{ govukButton({
         text: "Start now",
         href: "council_tax_number",
         isStartButton: true
       }) }}
+
+      <p>
+        You can also <a href="index">set up a Direct Debit by other methods</a>.
+      </p>
 
 
             <h2 class="govuk-heading-m">
