--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,15 +13,58 @@
         Royal Borough of Greenwich
       </h1>
 
-      <h2 class="govuk-heading-m">Direct Debit</h2>
+      <h2 class="govuk-heading-m">Set up Direct Debit</h2>
 
+      <h3 class="govuk-heading-s">v1</h3>
 
+      <p>
+        Emyr's initial wireframes translated over to the gov.uk prototype kit
+      </p>
+
+      <p>
+        <a href="Set_Up_A_Direct_Debit/v1/start">v1 start page</a>
+      </p>
+
+      <h3 class="govuk-heading-s">v2</h3>
+
+      <p>Progression of v1 journey</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="Set_Up_A_Direct_Debit/v1/start">v1 start page</a> - Emyr's initial wireframes</li>
-        <li><a href="Set_Up_A_Direct_Debit/v2/index">v2 landing page</a> - journey development</li>
-
+        <li>Start page split into two screens: 1. <a href="/Set_Up_A_Direct_Debit/v2/index">An overall Direct Debt page</a> with timescale expectancies for the tax payer; 2. <a href="/Set_Up_A_Direct_Debit/v2/start">A dedicated start page for Set Up A Direct Debit Online</a></li>
+      <li>Providing a council tax account number on <a href="/Set_Up_A_Direct_Debit/v2/council_tax_number">its own page</a>. Also contains <a href="Set_Up_A_Direct_Debit/v2/council_tax_number_no_number">an example of error messaging</a>.</li>
+      <li>Looks up property address and <a href="/Set_Up_A_Direct_Debit/v2/address_check">returns property address</a> and asks if this is the property to pay council tax for.</li>
+      <li><a href="/Set_Up_A_Direct_Debit/v2/amount_due">Displays amount outstanding</a>, ie. the amount the Direct Debit will be set up from. Also notes if there is an unsummonsed arrear amount</li>
+      <li><a href="/Set_Up_A_Direct_Debit/v2/communication_preferences">Ask user if they want to receive communications by email</a></li>
+      <li><a href="/Set_Up_A_Direct_Debit/v2/same_address_question">Ask if council tax bill address is the same as home address</a>, theory: Saves user entering an address, needed to set up Direct Debit</li>
+      <li>Updated, split out into sections, <a href="/Set_Up_A_Direct_Debit/v2/check_info_provided">check information screen</a>, which also displays data carried through</li>
+      <li><a href="/Set_Up_A_Direct_Debit/v2/confirmation">Updated confirmation screen</a> with clearer what has happened and what happens next</li>
       </ul>
+
+      <p>
+        <a href="Set_Up_A_Direct_Debit/v2/index">v2 landing page</a>
+      </p>
+
+      <h3 class="govuk-heading-s">v3</h3>
+
+      <p>Progression of v2 journey, after review with staff</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Revision of <a href="/Set_Up_A_Direct_Debit/v2/start">start page</a>, to include more detail on what you need before you start. Also included link to other methods of setting up a Direct Debit.</li>
+      <li>Now ask for <a href="/Set_Up_A_Direct_Debit/v3/property_postcode">property postcode<a> to validate access to set up Direct Debit. (You need to enter SE10 1AA to continue.)</li>
+      <li>New screen <a href="/Set_Up_A_Direct_Debit/v3/quit_setting_up">stopping setting up a Direct Debit</a>, asking user to check their reference/s and they are entering them correctly. If problem persists directs them to teh council tax team.</li>
+      <li>Slight redesign of <a href="/Set_Up_A_Direct_Debit/v3/amount_due">amount due</a>. Also have <a href="/Set_Up_A_Direct_Debit/v3/amount_due_with_arrears">an option for account with arrears</a>, directing the user to contact the council tax office.</li>
+      <li><a href="/Set_Up_A_Direct_Debit/v3/communication_preferences">Communication preferences</a> only appears if email address provided</li>
+      <li>Payment date is now on <a href="/Set_Up_A_Direct_Debit/v3/DD_date">its own screen</a> to provide clearer guidance but also help work out options on the next screen</li>
+      <li>Rework of payment schedule screen: <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_this_month">example 1</a>, <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_next_month">example 2</a>, and <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_odd_first_amount">example 3</a> with an odd first payment</li>
+      <li>Updated view of payment schedule on <a href="/Set_Up_A_Direct_Debit/v3/check_info_provided">check information screen</a>, which also displays data carried through. Also now carries Direct Debit Guarantee content and some terms of service.</li>
+      </ul>
+
+      <p>
+        <a href="Set_Up_A_Direct_Debit/v3/index">v3 landing page</a>
+      </p>
+
+
+
 
       <h2 class="govuk-heading-m">View a council tax balance online</h2>
 
